Revert "defconfig: remove duplicate options that are present in variant configs"
This reverts commit 590aaea351877a7194e50a8c6f8b4c0ecc2815d4.

--- a/arch/arm/configs/chronic_jf_defconfig
+++ b/arch/arm/configs/chronic_jf_defconfig
@@ -891,6 +891,7 @@ CONFIG_NETFILTER_NETLINK_QUEUE=y
 CONFIG_NETFILTER_NETLINK_LOG=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_MARK=y
+# CONFIG_NF_CONNTRACK_SECMARK is not set
 CONFIG_NF_CONNTRACK_PROCFS=y
 CONFIG_NF_CONNTRACK_EVENTS=y
 # CONFIG_NF_CONNTRACK_TIMEOUT is not set
@@ -3346,6 +3347,8 @@ CONFIG_MOTOR_DRV_MAX77693=y
 #
 CONFIG_SEC_FPGA=y
 CONFIG_IR_REMOCON_FPGA=y
+CONFIG_IRDA_MC96=y
+CONFIG_AUTHENTEC_VPNCLIENT_INTERCEPTOR=m
 # CONFIG_FELICA is not set
 # CONFIG_NFC_FELICA is not set
 
