Update slimmed defconfig

--- a/arch/arm/configs/Slimmed_jf_defconfig
+++ b/arch/arm/configs/Slimmed_jf_defconfig
@@ -2429,6 +2429,7 @@ CONFIG_RADIO_ADAPTERS=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_MSM_KGSL=y
+CONFIG_MSM_KGSL_SIMPLE_GOV=y
 # CONFIG_MSM_KGSL_CFF_DUMP is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_CP_STAT_NO_DETAIL is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP is not set
